avro_derive/tests/ui/avro_rs_373_untagged_enum.stderr
error: AvroSchema derive does not support changing the tagging Serde generates (`tag`, `content`, `untagged`, `variant_identifier`, `field_identifier`)
 --> tests/ui/avro_rs_373_untagged_enum.rs:4:1
  |
4 | / #[serde(untagged)]
5 | | enum Foo {
6 | |     One,
7 | |     Two,
8 | | }
  | |_^
