avro_derive/tests/ui/avro_rs_373_untagged_enum.rs
use apache_avro::AvroSchema;

#[derive(AvroSchema)]
#[serde(untagged)]
enum Foo {
    One,
    Two,
}

pub fn main() {}
